Fix warnings.
* Mark methods as static where reported.
* Don't use depredated new Integer()
* Remove redundant type declarations.

Change-Id: Iad30c7b08602900c769d6713e4be0f788897e502
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>